force-app/main/default/objects/POC__c/POC__c.object-meta.xml
<CustomObject>
    <label>POC Request</label>
    <nameField>
        <displayFormat>POC-{00000}</displayFormat>
        <label>POC Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>