force-app/main/default/objects/POC__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Opportunity__r.Owner.FirstName +&apos; &apos;+  Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>