force-app/main/default/objects/POC__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF( ISBLANK(POC_Account__c), Opportunity__r.Account.RecordType.DeveloperName, POC_Account__r.RecordType.DeveloperName )</formula>
    <label>(DEPRECATED) Account Type</label>
    <type>Text</type>
</CustomField>