force-app/main/default/objects/POC__c/fields/Add_Identity_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Add_Identity_Recovery__c</fullName>
    <label>Identity Recovery for AD + Entra ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>