force-app/main/default/objects/POC__c/fields/Additional_Accessories_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Accessories_Required__c</fullName>
    <label>Add. Accessories Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10/1GbE SFP+ (RBK-SFP-TSR-01) - pack of 4</fullName>
            </value>
            <value>
                <fullName>25/10GbE SFP+ (RBK-SFP28-TSR-01) - pack of 4</fullName>
            </value>
            <value>
                <fullName>3m Fiber Cables (RBK-F3M-CBL-01) - OM3 LC/LC, pack of 4</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Other - fill in field</fullName>
                <isActive>false</isActive>
                <label>Other - fill in field</label>
            </value>
            <value>
                <fullName>SFP 10G Transceivers for Rubrik appliance</fullName>
                <isActive>false</isActive>
                <label>SFP 10G Transceivers for Rubrik appliance</label>
            </value>
            <value>
                <fullName>SFP 1G Transceivers for Rubrik appliance</fullName>
                <isActive>false</isActive>
                <label>SFP 1G Transceivers for Rubrik appliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>