force-app/main/default/objects/POC__c/fields/AE_Email__c.field-meta.xml
<CustomField>
    <fullName>AE_Email__c</fullName>
    <label>AE Email</label>
    <type>Email</type>
</CustomField>