force-app/main/default/objects/POC__c/fields/Agent_Cloud_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Agent_Cloud_Acknowledgement__c</fullName>
    <description>Created as part of MKT-38 to store Rubrik Agent Cloud Acknowledgement.</description>
    <label>Form submitted and POC approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>