force-app/main/default/objects/POC__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>Serial_Number__r.POC_aging__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>