force-app/main/default/objects/POC__c/fields/Agreed_to_POC_terms__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_POC_terms__c</fullName>
    <formula>IF(  Opportunity__r.Account.Agreed_To_POC_terms__c = True, True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) Agreed to POC terms</label>
    <type>Checkbox</type>
</CustomField>