force-app/main/default/objects/POC__c/fields/Annapurna_Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>Annapurna_Acknowledgment__c</fullName>
    <description>Created with MKT26-405 to store acknowledgment that the SE has secured the required approvals to include Annapurna in the POC</description>
    <label>Annapurna Acknowledgment:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>