force-app/main/default/objects/POC__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Historic Record</fullName>
            </value>
            <value>
                <fullName>Return Initiated</fullName>
            </value>
            <value>
                <fullName>Return Approved</fullName>
            </value>
            <value>
                <fullName>Return Completed</fullName>
            </value>
            <value>
                <fullName>Return Rejected</fullName>
            </value>
            <value>
                <fullName>Extension Requested</fullName>
            </value>
            <value>
                <fullName>Extension Approved</fullName>
            </value>
            <value>
                <fullName>Extension Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Extension Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>