force-app/main/default/objects/POC__c/fields/Approval_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Detail__c</fullName>
    <label>Approval Status - Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Manager</fullName>
            </value>
            <value>
                <fullName>Pending SE Director</fullName>
            </value>
            <value>
                <fullName>Pending SE Leadership</fullName>
            </value>
            <value>
                <fullName>Pending POC Help</fullName>
            </value>
            <value>
                <fullName>Pending Finance</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>