force-app/main/default/objects/POC__c/fields/Archival_bandwidth_available__c.field-meta.xml
<CustomField>
    <fullName>Archival_bandwidth_available__c</fullName>
    <inlineHelpText>Number in Mbps</inlineHelpText>
    <label>(DEPRECATED) Archival bandwidth availabl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>