force-app/main/default/objects/POC__c/fields/Archival_CloudOut__c.field-meta.xml
<CustomField>
    <fullName>Archival_CloudOut__c</fullName>
    <inlineHelpText>Is Customer Archiving Data?</inlineHelpText>
    <label>(DEPRECATED) Archival (CloudOut)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>