force-app/main/default/objects/POC__c/fields/Archival_make__c.field-meta.xml
<CustomField>
    <fullName>Archival_make__c</fullName>
    <label>(DEPRECATED) Archival make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>