force-app/main/default/objects/POC__c/fields/Archival_model__c.field-meta.xml
<CustomField>
    <fullName>Archival_model__c</fullName>
    <label>(DEPRECATED) Archival model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>