force-app/main/default/objects/POC__c/fields/Archive_TB__c.field-meta.xml
<CustomField>
    <fullName>Archive_TB__c</fullName>
    <label>How many TB of Archive Tier do you need?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>