force-app/main/default/objects/POC__c/fields/AWS_Customer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Customer_Account_ID__c</fullName>
    <label>(DEPRECATED) AWS Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>