force-app/main/default/objects/POC__c/fields/AWS_Customer_Account_Region__c.field-meta.xml
<CustomField>
    <fullName>AWS_Customer_Account_Region__c</fullName>
    <label>(DEPRECATED) AWS Account Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>us-east-1</fullName>
            </value>
            <value>
                <fullName>us-east-2</fullName>
            </value>
            <value>
                <fullName>us-west-1</fullName>
            </value>
            <value>
                <fullName>us-west-2</fullName>
            </value>
            <value>
                <fullName>ca-central-1</fullName>
            </value>
            <value>
                <fullName>eu-central-1</fullName>
            </value>
            <value>
                <fullName>eu-west-1</fullName>
            </value>
            <value>
                <fullName>eu-west-2</fullName>
            </value>
            <value>
                <fullName>eu-west-3</fullName>
            </value>
            <value>
                <fullName>ap-northeast-1</fullName>
            </value>
            <value>
                <fullName>ap-northeast-2</fullName>
            </value>
            <value>
                <fullName>ap-southeast-1</fullName>
            </value>
            <value>
                <fullName>ap-southeast-2</fullName>
            </value>
            <value>
                <fullName>ap-south-1</fullName>
            </value>
            <value>
                <fullName>sa-east-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>