force-app/main/default/objects/POC__c/fields/Backup_TB__c.field-meta.xml
<CustomField>
    <fullName>Backup_TB__c</fullName>
    <label>How many TB of Backup Tier do you need?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>