force-app/main/default/objects/POC__c/fields/Bandwidth_for_Replication__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_for_Replication__c</fullName>
    <label>(DEPRECATED) Bandwidth for Replication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>