force-app/main/default/objects/POC__c/fields/Carnet_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Expiration_Date__c</fullName>
    <label>Carnet Expiration Date</label>
    <type>Date</type>
</CustomField>