force-app/main/default/objects/POC__c/fields/Carnet_No__c.field-meta.xml
<CustomField>
    <fullName>Carnet_No__c</fullName>
    <label>Carnet No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>