force-app/main/default/objects/POC__c/fields/Cloud_Cluster_Location__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Cluster_Location__c</fullName>
    <label>Cloud Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Azute</fullName>
                <isActive>false</isActive>
                <label>Azute</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>