force-app/main/default/objects/POC__c/fields/Cloud_Cluster_Size_TB__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Cluster_Size_TB__c</fullName>
    <label>(DEPRECATED) Cloud Cluster Size (TB)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>