force-app/main/default/objects/POC__c/fields/Cloud_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Data_Type__c</fullName>
    <label>Data Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Premise</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Snowflake</fullName>
            </value>
            <value>
                <fullName>M365</fullName>
            </value>
            <value>
                <fullName>Google Workspace</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify in Other Product Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>