force-app/main/default/objects/POC__c/fields/Cloud_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Type__c</fullName>
    <label>Cloud Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>