force-app/main/default/objects/POC__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter any special RMA instructions to Order Management</inlineHelpText>
    <label>(DEPRECATED) Comments</label>
    <type>TextArea</type>
</CustomField>