force-app/main/default/objects/POC__c/fields/Comments_by_Ops__c.field-meta.xml
<CustomField>
    <fullName>Comments_by_Ops__c</fullName>
    <label>Comments by Ops</label>
    <type>TextArea</type>
</CustomField>