force-app/main/default/objects/POC__c/fields/Compression__c.field-meta.xml
<CustomField>
    <fullName>Compression__c</fullName>
    <inlineHelpText>Is compression enabled in the customer environment?</inlineHelpText>
    <label>(DEPRECATED) Compression</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>