force-app/main/default/objects/POC__c/fields/Conditional_PO_Required__c.field-meta.xml
<CustomField>
    <fullName>Conditional_PO_Required__c</fullName>
    <description>Formula field that evaluates POC QTY and Product Family to determine if a Conditional PO is Required</description>
    <formula>IF(
 AND(
 POC_Qty__c &gt;1, ISPICKVAL(  POC_Agreement__c  , &apos;No&apos;)
) , TRUE , FALSE
)</formula>
    <label>(DEPRECATED) Conditional PO Required</label>
    <type>Checkbox</type>
</CustomField>