force-app/main/default/objects/POC__c/fields/Conditional_PO_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Conditional_PO_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional PO Submitted</label>
    <type>Checkbox</type>
</CustomField>