force-app/main/default/objects/POC__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Main Point of Contact running the POC.</description>
    <label>POC Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>POC Requests</relationshipLabel>
    <relationshipName>POC_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>