force-app/main/default/objects/POC__c/fields/Current_POC_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_POC_Submission_Date__c</fullName>
    <label>Current POC Submission Date</label>
    <type>DateTime</type>
</CustomField>