force-app/main/default/objects/POC__c/fields/Data_encrypted__c.field-meta.xml
<CustomField>
    <fullName>Data_encrypted__c</fullName>
    <inlineHelpText>Are any data sources encrypted: For example, has the customer enabled native encryption on an Oracle database?</inlineHelpText>
    <label>(DEPRECATED) Data encrypted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>