force-app/main/default/objects/POC__c/fields/Data_Redundancy_Archive_NAS__c.field-meta.xml
<CustomField>
    <fullName>Data_Redundancy_Archive_NAS__c</fullName>
    <label>Data Redundancy (Archive)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Zone (LRS)</fullName>
            </value>
            <value>
                <fullName>Multi Zone (ZRS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>