force-app/main/default/objects/POC__c/fields/Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned__c</fullName>
    <formula>IF(  POC_Returned__c = True, NOW(),
 IF(  Date_Returned_hid__c &lt;&gt;NULL, Date_Returned_hid__c,NULL )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(DEPRECATED) Date Returned_form</label>
    <type>DateTime</type>
</CustomField>