force-app/main/default/objects/POC__c/fields/Date_Returned_hid__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned_hid__c</fullName>
    <label>(DEPRECATED) Date Returned</label>
    <type>DateTime</type>
</CustomField>