force-app/main/default/objects/POC__c/fields/Date_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped__c</fullName>
    <formula>IF(  POC_Sent__c = True, NOW(),
 IF(  Date_Shipped_hid__c &lt;&gt;NULL, Date_Shipped_hid__c,NULL)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Select &quot;POC Sent&quot; to generate Shipping Date</inlineHelpText>
    <label>(DEPRECATED) Date Shipped_form</label>
    <type>DateTime</type>
</CustomField>