force-app/main/default/objects/POC__c/fields/Date_Shipped_hid__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped_hid__c</fullName>
    <label>(DEPRECATED) Date Shipped</label>
    <type>DateTime</type>
</CustomField>