force-app/main/default/objects/POC__c/fields/Date_Terms_Agreed_To__c.field-meta.xml
<CustomField>
    <fullName>Date_Terms_Agreed_To__c</fullName>
    <description>Updated via formula when Terms Agreed to by Customer is checked</description>
    <formula>IF(
 Agreed_to_POC_terms__c  = TRUE, NOW(), NULL
)</formula>
    <label>Date Terms Agreed To</label>
    <type>DateTime</type>
</CustomField>