force-app/main/default/objects/POC__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <formula>Opportunity__r.Distributor_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Name</label>
    <type>Text</type>
</CustomField>