force-app/main/default/objects/POC__c/fields/Distributor_with_Signed_POC_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Distributor_with_Signed_POC_Addendum__c</fullName>
    <label>Partner/Disty with Signed POC Addendum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASG</fullName>
            </value>
            <value>
                <fullName>Beta IT - KSA</fullName>
            </value>
            <value>
                <fullName>BigTek</fullName>
            </value>
            <value>
                <fullName>CDI Southeast</fullName>
            </value>
            <value>
                <fullName>Clico</fullName>
            </value>
            <value>
                <fullName>Data Blue</fullName>
            </value>
            <value>
                <fullName>Datec</fullName>
            </value>
            <value>
                <fullName>ECS Hong Kong</fullName>
            </value>
            <value>
                <fullName>ECS Malaysia</fullName>
            </value>
            <value>
                <fullName>ePlus</fullName>
            </value>
            <value>
                <fullName>Evanssion</fullName>
            </value>
            <value>
                <fullName>Evotek</fullName>
            </value>
            <value>
                <fullName>Exclusive Networks APJ</fullName>
            </value>
            <value>
                <fullName>FusionStorm</fullName>
            </value>
            <value>
                <fullName>Future Tec</fullName>
            </value>
            <value>
                <fullName>GlassBox</fullName>
            </value>
            <value>
                <fullName>ION</fullName>
            </value>
            <value>
                <fullName>IT Blueprint</fullName>
            </value>
            <value>
                <fullName>IT Net</fullName>
            </value>
            <value>
                <fullName>Ivox</fullName>
            </value>
            <value>
                <fullName>OnX</fullName>
            </value>
            <value>
                <fullName>Right Systems</fullName>
            </value>
            <value>
                <fullName>Sentinnel Engineering</fullName>
            </value>
            <value>
                <fullName>Simplevia</fullName>
            </value>
            <value>
                <fullName>Structured</fullName>
            </value>
            <value>
                <fullName>Surge Technologies dba P1</fullName>
            </value>
            <value>
                <fullName>Synegi</fullName>
            </value>
            <value>
                <fullName>Technologent</fullName>
            </value>
            <value>
                <fullName>Tec-Refresh</fullName>
            </value>
            <value>
                <fullName>Trace3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>