force-app/main/default/objects/POC__c/fields/Disty_with_Signed_POC_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Disty_with_Signed_POC_Addendum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner/Disty with Signed POC Addendum</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POC Requests (Partner/Disty with Signed POC Addendum)</relationshipLabel>
    <relationshipName>POC_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>