force-app/main/default/objects/POC__c/fields/Estimated_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Decision_Date__c</fullName>
    <description>Updates the Estimated Decision Date Based on Time Needed for POC</description>
    <formula>IF(
  ISPICKVAL(Approval_Status__c,&apos;Approved&apos;) &amp;&amp;  X2_4_Weeks_hid__c = TRUE, TODAY () + 30 , IF( ISPICKVAL(Approval_Status__c,&apos;Approved&apos;) &amp;&amp; X4_6_Weeks_hid__c = TRUE, TODAY() + 60 , IF ( ISPICKVAL(Approval_Status__c,&apos;Approved&apos;) &amp;&amp; X6_8_Weeks_hid__c = TRUE, TODAY() + 90, IF(
ISPICKVAL(Approval_Status__c,&apos;Approved&apos;) &amp;&amp; X8_10_Weeks_hid__c = TRUE, TODAY() + 120, NULL))))</formula>
    <label>(DEPRECATED) Estimated Decision Date</label>
    <type>Date</type>
</CustomField>