force-app/main/default/objects/POC__c/fields/Estimated_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ship_Date__c</fullName>
    <label>(DEPRECATED) Estimated Ship Date</label>
    <type>Date</type>
</CustomField>