force-app/main/default/objects/POC__c/fields/Extension_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date_Changed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Extension Date Changed</label>
    <type>Checkbox</type>
</CustomField>