force-app/main/default/objects/POC__c/fields/Google_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Google_Workspace__c</fullName>
    <description>Created as part of MKT26-1556.</description>
    <label>Google Workspace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>