force-app/main/default/objects/POC__c/fields/Google_Workspace_Hosting_Environment__c.field-meta.xml
<CustomField>
    <fullName>Google_Workspace_Hosting_Environment__c</fullName>
    <description>Created as part of MKT26-1556.</description>
    <label>Google Workspace Hosting Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Hosted Foundation Edition</fullName>
                <default>true</default>
                <label>Rubrik Hosted Foundation Edition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>