force-app/main/default/objects/POC__c/fields/Has_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Has_Hardware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Hardware</label>
    <type>Checkbox</type>
</CustomField>