force-app/main/default/objects/POC__c/fields/Has_NAS_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_NAS_Product__c</fullName>
    <formula>INCLUDES( Product_Categories__c , &apos;NAS Cloud Direct&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has NAS Product</label>
    <type>Checkbox</type>
</CustomField>