force-app/main/default/objects/POC__c/fields/Has_only_DSPM_SKU__c.field-meta.xml
<CustomField>
    <fullName>Has_only_DSPM_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MKT25-673 - Was created to check for POC with only DSPM SKU to be used in the Approval Process. 
Couldn&apos;t handle it in the entry criteria because of the limitation on specific functions related to multipicklist field Product_Categories__c</description>
    <label>Has only DSPM SKU</label>
    <type>Checkbox</type>
</CustomField>