force-app/main/default/objects/POC__c/fields/Hosting_Environment__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Environment__c</fullName>
    <label>(DEPRECATED)Hosting Environment ( Jira )</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Hosted Foundation Edition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>