force-app/main/default/objects/POC__c/fields/Hosting_Environment_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Environment_Salesforce__c</fullName>
    <label>(DEPRECATED) Hosting Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rubrik Hosted Foundation Edition plus DevOps Add-on</fullName>
            </value>
            <value>
                <fullName>Rubrik Hosted Foundation Edition</fullName>
                <isActive>false</isActive>
                <label>Rubrik Hosted Foundation Edition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>