force-app/main/default/objects/POC__c/fields/How_many_identity_users_are_there__c.field-meta.xml
<CustomField>
    <fullName>How_many_identity_users_are_there__c</fullName>
    <label>How many Identity Users are there?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>