force-app/main/default/objects/POC__c/fields/How_many_identity_users_areThere__c.field-meta.xml
<CustomField>
    <fullName>How_many_identity_users_areThere__c</fullName>
    <label>How many identity users are there?</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>